# gitlab_webhook_gateway

./: .dockerignore  .env.template  .gitignore  GilabGeteway.db  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.template
docker/: Dockerfile  start.sh
migrations/: env.py
migrations/versions/: 107b864759a0_add_field_message_table_in_project_name.py  409671164c5d_add_triger_to_updated_at_table_messages.py  5a42140c7ad7_initial_migration.py  a058590aca8b_added_model_pipeline.py  b91216f49c9d_initial_migration.py  ee074aeba0fa_add_triger_to_updated_at_table_messages.py
src/: main.py
src/api/v1/: bot_view.py  webhook_view.py
src/core/: logger.py  settings.py
src/db/: aiosqlite.py
src/exceptions/: base_exceptions.py
src/models/: __init__.py  base.py  message.py
src/schemas/: merge_request_schemas.py  pipeline_schemas.py
src/service/: base_service.py  create_message_service.py
src/telegram_bot/: bot_main.py
src/telegram_bot/routers/: __init__.py  base_commad_tg_route.py  merge_request_tg_route.py
src/utils/: bot.py  gitlab_connect.py
src/utils/utils_schemas/: gitlab_schemas.py
